--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,10 +18,12 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-image: url("/background.jpg") ;
+  background-repeat: none;
+}
+
+@layer base {
+  html {
+    font-family: Montserrat;
+  }
 }
